welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:9: error: not found: value break
      break
      ^