welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = 
{
  var position = -1
  for (i<-1 to nums.length) 
  {
    if (nums(i-1)==lookingFor) 
    {
      position = i-1
      break
    }
  }
  return position
}